fixed the folder structure and implemented createDoctor api
