# src/routes/admin.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from "express";
-import { authenticate } from "../middleware/auth.middleware";
-import { authorize } from "../middleware/authorize.middleware";
-import { createPatient } from "../controllers/admin.controller";
+import { authenticate } from "../middleware/auth.middleware.js";
+import { authorize } from "../middleware/authorize.middleware.js";
+import { createPatient } from "../controllers/admin.controller.js";
+import {createDoctor} from "../controllers/admin.controller.js";
 
 const router = Router();
 
@@ -11,5 +12,13 @@ router.post(
   authorize("ADMIN"),
   createPatient
 );
+
+router.post(
+    "/doctors",
+    authenticate,
+    authorize("ADMIN"),
+    createDoctor
+    
+)
 
 export default router;
